# turnbasedgame

./: AGENTS.md  README.md  TESTING.md  jest.config.js  package-lock.json  package.json  playwright.config.ts
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
client/: eslint.config.js  eslint.config.mjs  next.config.ts  package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  metadata.ts  page.tsx
client/src/components/poker-table/: BettingControls.tsx  CommunityCards.tsx  PlayerSeat.tsx  PokerTable.tsx  PotDisplay.tsx
client/src/components/ui/: ConnectionStatus.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  Header.tsx
client/src/hooks/: useWebSocket.ts
client/src/lib/constants/: game.ts  storage.ts
client/src/lib/stores/: connection-store.ts  game-store.ts
client/src/lib/utils/: browser-utils.ts  format-utils.ts  logger.ts
client/src/lib/websocket/: connection-manager.ts  message-parser.ts  reconnect-handler.ts  session-manager.ts
client/src/types/: game-types.ts
docs/: architecture.md  atdd-checklist-epic1-story1.2.md  automation-summary-story1.2.md  epics.md  implementation-readiness-report-2025-12-10.md  implementation-readiness-report-2025-12-10.md.backup  prd.md  shared-types.md  test-design-epic-1.md  test-design-epic-2.md  test-design-epic-3.md  ux-color-themes.html  ux-design-directions.html  ux-design-specification.md  ux-design-validation-report.md
docs/sprint-artifacts/: 1-2-establish-websocket-connection.md  sprint-status.yaml
scripts/: build-all.sh  deploy.sh  dev.sh
server/: CMakeLists.txt
server/src/: main.cpp
server/tests/: websocket_server.test.cpp
tests/: setup.ts
tests/component/: BettingControls.test.tsx  ConnectionStatus.test.tsx  connection-store.test.ts  game-store.test.ts  message-parser.test.ts
tests/e2e/: websocket-connection.spec.ts
tests/support/factories/: websocket.factory.ts
tests/support/fixtures/: websocket.fixture.ts
